--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=, initial-scale=1.0">
-  <title>Document</title>
+  <title>Happy Football</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <!-- font awesome cmd script -->
+  <script src="https://kit.fontawesome.com/0660dc4b3e.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-  
+    <!------------- header section --------------->
+  <header class="header-body"> 
+    <div class="header-wrap"> 
+      <div class="header-info">
+        <h1>Football players have various duties </h1>
+        <p>Football players are athletes who play football professionally. It should be noted that while some parts of the world use the word “football” to describe soccer, actual football</p>
+          <a href="https://www.youtube.com/watch?v=kihgiDH5rIs"> Watch Live <i class="fa-solid fa-angle-right"></i></a>
+      </div>
+      
+      <div class="header-img">
+        <img src="images/Banner Image.png" alt="">
+      </div>
+    </div>
+  </header>
 </body>
 </html>
