--- a/index.html
+++ b/index.html
@@ -25,5 +25,39 @@
       </div>
     </div>
   </header>
+  <main> 
+    <div class="main-wrap"> 
+      <nav> 
+        <div class="match-nav-list"> 
+          <a href="#upcoming-match">Upcoming Match</a>
+          <a href="#all-group">All Group</a>
+          <a href="#blog">Blog</a>
+        </div>
+      </nav>
+      <section class="blog-section" id="blog"> 
+        <div class="container"> 
+          <div class="blog-wrap"> 
+            <div class="blog-img"> 
+              <img src="images/Blog Image.png" alt="">
+            </div>
+            <div class="blog-info"> 
+                <a href="#">Transfer</a>
+                <h4>A football match consists of two halves and each half is 45 minutes long.</h4>
+                <div class="blog-watch-time"> 
+                  <div class="watch-time"> 
+                    <i class="fa-regular fa-clock"></i>
+                    <p> 10h</p>
+                  </div>
+                  <div class="blog-comment"> 
+                    <i class="fa-regular fa-message"></i>
+                    <p>23</p>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
