--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>Happy Football</title>
   <link rel="stylesheet" href="styles/style.css">
+  <!-- responsive sheet---------->
+  <link rel="stylesheet" href="styles/responsive.css">
   <!-- font awesome cmd script -->
   <script src="https://kit.fontawesome.com/0660dc4b3e.js" crossorigin="anonymous"></script>
 
