--- a/match.html
+++ b/match.html
@@ -15,6 +15,8 @@
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>Happy Football</title>
   <link rel="stylesheet" href="styles/style.css">
+  <!-- responsive -->
+  <link rel="stylesheet" href="styles/responsive.css">
   <!-- font awesome cmd script -->
   <script src="https://kit.fontawesome.com/0660dc4b3e.js" crossorigin="anonymous"></script>
 
@@ -58,7 +60,7 @@
                 <h1>Germany VS France</h1>
                 <p>April 01,2023,1.00 AM</p>
               </div>
-            </div>
+            </div><!--single match-->
             <div class="single-match">
               <div class="match-flag"> 
                 <img src="images/Flag.png" alt="">
