--- a/match.html
+++ b/match.html
@@ -27,7 +27,7 @@
     <div class="header-wrap"> 
       <div class="header-info">
         <h1>Football players have various duties </h1>
-        <p>Football players are athletes who play football professionally. It should be noted that while some parts of the world use the word “football” to describe soccer, actual football</p>
+        <p>Football players are athletes who play football professionally. <span>should be noted that while some parts of the world use the word “football” to describe soccer, actual football</span></p>
           <a href="https://www.youtube.com/watch?v=kihgiDH5rIs"> Watch Live <i class="fa-solid fa-angle-right"></i></a>
       </div>
       
@@ -132,8 +132,8 @@
     </div>
     <hr>
     <div class="social-link">
-      <a href=""><i class="fa-regular fa-address-card"></i> Contract Us</a>
-      <a href=""><i class="fa-solid fa-bell-concierge"></i> Terms of Service</a>
+      <a href="https://www.crunchbase.com/organization/contract-us"><i class="fa-regular fa-address-card"></i> Contract Us</a>
+      <a href="https://termify.io/terms-of-service-generator?gclid=Cj0KCQjwz96WBhC8ARIsAATR252uFh-lj8CWX5Xvp_J9l2ZXFw9bskmo8IqOMi2b4NNnKpKlNk2TOX4aAlsTEALw_wcB"><i class="fa-solid fa-bell-concierge"></i> Terms of Service</a>
       <a href=""><i class="fa-solid fa-lock"></i> Privacy Policy</a>
       <a href="https://www.instagram.com/ajsifat6233/?hl=en"><i class="fa-brands fa-instagram"></i> Instagram</a>
       <a href="https://www.facebook.com/sifat.hossain.927543/"><i class="fa-brands fa-facebook-square"></i> Facebook</a>
