--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="header-wrap"> 
       <div class="header-info">
         <h1>Football players have various duties </h1>
-        <p>Football players are athletes who play football professionally. It should be noted that while some parts of the world use the word “football” to describe soccer, actual football</p>
+        <p>Football players are athletes who play football professionally. <span>It should be noted that while  some parts of the world use the word “football” to describe soccer, actual football </span></p>
           <a href="https://www.youtube.com/watch?v=kihgiDH5rIs"> Watch Live <i class="fa-solid fa-angle-right"></i></a>
       </div>
       
@@ -169,7 +169,7 @@
               </div>
             </div>
           </div>
-          <div class="single-blog">
+          <div class="single-blog display-block">
             <div class="blog-img">
               <img src="images/Blog Image.png" alt="">
             </div>
@@ -185,13 +185,17 @@
               </div>
             </div>
           </div>
-          </di>
+          </div>
+                      
         </div>
         </div>
       </section>
     </div>
   </main>
+
 </body>
+
+  <div class="view-btn"><a href="#">View All</a></div>
 
 <footer> 
   <div class="footer-wrap"> 
@@ -200,12 +204,12 @@
     </div>
     <hr>
     <div class="social-link">
-      <a href=""><i class="fa-regular fa-address-card"></i> Contract Us</a>
-      <a href=""><i class="fa-solid fa-bell-concierge"></i> Terms of Service</a>
-      <a href=""><i class="fa-solid fa-lock"></i> Privacy Policy</a>
-      <a href="https://www.instagram.com/ajsifat6233/?hl=en"><i class="fa-brands fa-instagram"></i> Instagram</a>
-      <a href="https://www.facebook.com/sifat.hossain.927543/"><i class="fa-brands fa-facebook-square"></i> Facebook</a>
-      <a href="https://twitter.com/AJSifat1"><i class="fa-brands fa-twitter"></i> Twitter</a>
+      <a href="https://www.crunchbase.com/organization/contract-us" target="_blank"><i class="fa-regular fa-address-card"></i> Contract Us</a>
+      <a href="https://termify.io/terms-of-service-generator?gclid=Cj0KCQjwz96WBhC8ARIsAATR252uFh-lj8CWX5Xvp_J9l2ZXFw9bskmo8IqOMi2b4NNnKpKlNk2TOX4aAlsTEALw_wcB" target="_blank"><i class="fa-solid fa-bell-concierge"></i> Terms of Service</a>
+      <a href="https://termify.io/privacy-policy-generator?gclid=Cj0KCQjwz96WBhC8ARIsAATR251_y64dJa51kLlh5ZlxM4EwxMurr6dYt_8MSZ-Tyx7-af61H4XFcJwaAjK4EALw_wcB" target="_blank"><i class="fa-solid fa-lock"></i> Privacy Policy</a>
+      <a href="https://www.instagram.com/ajsifat6233/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
+      <a href="https://www.facebook.com/sifat.hossain.927543/" target="_blank"><i class="fa-brands fa-facebook-square" target="_blank"></i> Facebook</a>
+      <a href="https://twitter.com/AJSifat1" target="_blank"><i class="fa-brands fa-twitter"></i> Twitter</a>
     </div>
   </div>
 
