--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="main-wrap container-wrapper"> 
       <nav> 
         <ul>
-          <li><a href="#match.html">Upcoming Match</a></li>
+          <li><a href="match.html">Upcoming Match</a></li>
           <li><a href="#all-group">All Group</a></li>
-          <li ><a class="active" href="#blog">Blog</a></li>
+          <li ><a class="active" href="index.html">Blog</a></li>
         </ul>
       </nav>
 
