--- a/match.html
+++ b/match.html
@@ -42,7 +42,7 @@
         <ul>
           <li><a href="#upcoming-match">Upcoming Match</a></li>
           <li><a href="match.html">All Group</a></li>
-          <li ><a class="active" href="#blog">Blog</a></li>
+          <li ><a class="active" href="index.html">Blog</a></li>
         </ul>
       </nav>
 
