--- a/match.html
+++ b/match.html
@@ -26,7 +26,7 @@
   <header class="header-body"  > 
     <div class="header-wrap"> 
       <div class="header-info">
-        <h1>Football players have various duties </h1>
+        <h1>Football Match Timeline</h1>
         <p>Football players are athletes who play football professionally. <span>should be noted that while some parts of the world use the word “football” to describe soccer, actual football</span></p>
           <a href="https://www.youtube.com/watch?v=kihgiDH5rIs"> Watch Live <i class="fa-solid fa-angle-right"></i></a>
       </div>
@@ -124,6 +124,8 @@
     </div>
   </main>
 </body>
+
+  <div class="view-btn"><a href="#">View All</a></div>
 
 <footer> 
   <div class="footer-wrap"> 
