--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <!---------- Blog section ------------->
       <section class="blog-section" id="blog"> 
         <div class="blog-section-wrapper"> 
-         <div class="blog-container container">
+          <div class="blog-container container">
           <div class="single-blog">
             <div class="blog-img">
               <img src="images/Blog Image.png" alt="">
@@ -131,7 +131,6 @@
               <div class="blog-watch-time">
                 <i class="fa-regular fa-clock"></i>
                 <p> 10h</p>
-          
                 <i class="fa-regular fa-message"></i>
                 <p>23</p>
               </div>
@@ -185,8 +184,7 @@
               </div>
             </div>
           </div>
-          </div>
-                      
+          </div>         
         </div>
         </div>
       </section>
@@ -197,6 +195,9 @@
 
   <div class="view-btn"><a href="#">View All</a></div>
 
+
+
+        <!-- -------------Footer section------------------- -->
 <footer> 
   <div class="footer-wrap"> 
     <div class="footer-title">
